fix to out of bounds candle rendering

--- a/src/modules/market/components/market-outcome-charts--candlestick/market-outcome-charts--candlestick.styles.less
+++ b/src/modules/market/components/market-outcome-charts--candlestick/market-outcome-charts--candlestick.styles.less
@@ -30,6 +30,10 @@
   position: relative;
 
   :global {
+    #testing {
+      background-color: red;
+    }
+
     #candlestick_chart {
       overflow: auto;
     }
